Integration of REL source with TrOWL

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.pellet-query.jar=lib/pellet-query.jar
 file.reference.pellet-rules.jar=lib/pellet-rules.jar
 file.reference.relaxngDatatype.jar=lib/relaxngDatatype.jar
 file.reference.RELDL0_0_12.jar=lib/RELDL0_0_12.jar
+file.reference.servlet-api-2.5.jar=lib/servlet-api-2.5.jar
 file.reference.servlet-api.jar=lib/servlet-api.jar
 file.reference.xsdlib.jar=lib/xsdlib.jar
 includes=**
@@ -57,7 +58,8 @@ javac.classpath=\
     ${file.reference.pellet-rules.jar}:\
     ${file.reference.owlapi-bin.jar}:\
     ${file.reference.pellet-query.jar}:\
-    ${file.reference.RELDL0_0_12.jar}
+    ${file.reference.RELDL0_0_12.jar}:\
+    ${file.reference.servlet-api-2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -66,7 +68,6 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}
 javadoc.additionalparam=
 javadoc.author=false
@@ -79,6 +80,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 jnlp.codebase.type=local
 jnlp.codebase.url=file:/Users/ed/NetBeansProjects/TrOWLCore/dist
 jnlp.descriptor=application
